--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,7 @@
 @use 'strike-hover';
 @use 'float-hover';
 @use 'spin-hover';
+@use 'scroll-bar';
 
 // Import Fonts From Google
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600;700;800;900&display=swap');
@@ -34,6 +35,7 @@ $roboto: 'Roboto', sans-serif;
     margin: 0;
     box-sizing: border-box;
 }
+
 
 // Body
 body {
@@ -129,7 +131,6 @@ body {
                 max-width: 75vw; 
                 width: 400px;
                 aspect-ratio: 1;
-                background: red;
             }
 
         }
@@ -139,11 +140,16 @@ body {
         grid-row: 3;
         margin-bottom: 30px;
         .footer-animation{
-            filter: brightness(100%);
             height: 90%;
             filter: invert(1);
         }
     }
+}
+
+.about-us-page{
+    height: 100vh;
+    background: red;
+    width: 100%;
 }
 
 
