--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -13,6 +13,10 @@
 // Import Fonts From Google
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+:root{
+    --vh: 1vh;
+}
+
 // Colours
 $black : #262730;
 $white : #FFF4E9;
@@ -50,8 +54,12 @@ body {
     padding-inline: 15px;
     color: $white;
     @include font-roboto();
+    scroll-snap-type: y proximity;
 }
 
+.page{
+    scroll-snap-align: center;
+}
 
 .landing-page{
 
@@ -61,7 +69,9 @@ body {
     gap: 10px;
 
     width: 100%;
-    height: 100vh;
+
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
 
     .header{
         grid-row: 1;
@@ -79,6 +89,7 @@ body {
             @include flex;
             height: 100%;
             font-size: 30px;
+            color: $white;
 
         }
         .navigation{
@@ -164,8 +175,11 @@ body {
 }
 
 .about-us-page{
-    height: 100vh;
-    background: red;
+
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
+
+    background: rgba($black, 0.8);
     width: 100%;
 }
 
