--- a/src/assets/styles/hover-animations/_strike-hover.scss
+++ b/src/assets/styles/hover-animations/_strike-hover.scss
@@ -4,11 +4,11 @@ $blue : #9BB1FF;
 
 .strike-hover{
     position: relative;
-    padding: 5px;
 }
 
 .strike-hover:hover{
     color: $blue;
+    cursor: pointer;
 }
 
 .strike-hover:before, .strike-hover:after {
