--- a/src/assets/styles/load-animations/_fade.scss
+++ b/src/assets/styles/load-animations/_fade.scss
@@ -2,7 +2,7 @@
     filter: blur(2px);
     transform: translateX(-10px);
     opacity: 0;
-    transition: 1s ease;
+    transition: 1s ease-out;
 
     &.down{
         transform: translateY(-10px);
