--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -55,6 +55,7 @@ $roboto: 'Roboto', sans-serif;
 
 html{
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 
@@ -77,8 +78,6 @@ body {
     top: 0;
     margin: none;
     padding: none;
-    width: 100%;
-    height: 100%;
 }
 
 .hide{
@@ -87,10 +86,7 @@ body {
 }
 
 #trailer{
-    height: 5px;
-    width: 5px;
-    background: $white;
-    border-radius: 50%;
+
     position: fixed;
     left: 0px;
     top: 0px;
@@ -98,11 +94,38 @@ body {
     pointer-events: none;
     opacity: 0;
     transition: opacity 500ms ease;
+    @include flex;
+
+    .inner, .outer{
+        transition: 0.6s ease-in;
+        height: 10px;
+        width: 10px;
+        border: 1px solid $white;
+        transform: rotate(45deg);
+        position: absolute;
+    }
+
+    &.active{
+        .inner{
+            transform: scale(0.15) rotate(45deg);
+            background: $white;
+        }
+        .outer{
+            transform: scale(1.6) rotate(45deg);
+        }
+    }
+
+}
+
+html:hover{
+    #trailer{
+        opacity: 1;
+    }
 }
 
 
 .landing-page{
-
+    overflow: hidden;
     display: grid;
     grid-template-rows: 100px 1fr 140px;
     grid-template-columns: 1fr;
@@ -222,18 +245,19 @@ body {
             .buttons{
                 @include flex;
                 font-size: 20px;
-                // gap: 20px;
 
                 transform: translateX(-10px);
 
                 .button{
+                    transition: color 0.6s ease;
                     color: rgba($white, 0.7);
-                    padding:  2px 10px;
+                    padding:  2px 15px;
+
+                    &:hover{
+                        color: rgba($white, 0.9);
+                    }
                 }
 
-                // .button:nth-child(1){
-                //     padding-left: 0px;
-                // }
             }
 
 
@@ -251,9 +275,7 @@ body {
                 width: 400px;
                 aspect-ratio: 1;
 
-                &hover{
-                    cursor: grab;
-                }
+            
             }
 
 
@@ -276,14 +298,6 @@ body {
     }
 }
 
-.about-us-page{
-
-    @include trueHeight;
-
-    background: rgba($black, 0.8);
-    width: 100%;
-}
-
 // Media Query for Mobile Devices
 @media (max-width: 530px ) {
 
@@ -304,5 +318,128 @@ body {
         }
     }
 }
+
+// Seperator Styles with custom width
+@for $counter from 0 through 10{
+
+    $percent : #{$counter * 10} + '%';
+
+    .seperator-#{$counter} {
+        width: $percent;
+        height: 1px;
+        margin: 0 auto;
+        background: rgba($white, 0.3);
+        
+    }
+}
+
+// General Page Styles
+.page{
+    width: 80%;
+    margin: 0px auto;
+}
+@media (max-width: 1300px) {
+    .page{
+        width: 90%;
+    }
+}
+@media (max-width: 600px) {
+    .page{
+        width: 95%;
+    }
+}
+
+.pageTitle{
+    width: 90%;
+    margin: 0 auto;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    position: relative;
+
+    .pointer{
+        @include flex;
+        margin-right: 15px;
+
+        * {  
+            width: 12px;
+            height: 12px;
+            
+            border: 1px solid $white;
+            margin-right: 10px;
+            transform: rotate(45deg);
+            position: absolute;
+            transition-delay: 0.5s;
+        }
+
+        &.show{
+
+            .inner{
+                transform: rotate(135deg) scale(0.15);
+                animation: square-highlight-inner 1s ease-in;
+                background: $white;
+            }
+
+            .outer{
+                transform: rotate(135deg) scale(1.5);
+                animation: square-highlight-outer 1s ease-in;
+            }
+
+        }
+
+    }
+
+    .number{
+        color: rgba($white, 0.4);
+    }
+
+    .title{
+        letter-spacing: 2mm;
+    }
+
+    .line{
+        flex-grow: 1;
+        height: 1px; 
+        background: rgba($white, 0.4);
+    }
+}
+
+.about-us-page{
+
+    @include trueHeight;
+    background: $black;
+
+}
+
+@keyframes square-highlight-outer{
+    0% {
+        transform: rotate(45deg);
+    }
+    50%{
+        transform: rotate(135deg) scale(1);
+
+    }
+    100%{
+        transform: rotate(135deg) scale(1.5);
+    }
+}
+
+@keyframes square-highlight-inner{
+    0% {
+        transform: rotate(45deg);
+    }
+    50%{
+        transform: rotate(135deg) scale(1);
+        background: transparent;
+
+    }
+    100%{
+        transform: rotate(135deg) scale(0.15);
+        background: $white;
+    }
+}
+
+
 
 
