--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -60,14 +60,13 @@ html{
     overflow-x: hidden;
 }
 
-
 // Body
 body {
     background-color: $black;
     padding-inline: 15px;
     color: $white;
     @include font-roboto();
-    scroll-snap-type: y proximity;
+    overflow: hidden;
 }
 
 // Background for ambient particles
@@ -82,14 +81,87 @@ body {
 .hide{
     transition: 0.3s;
     opacity: 0 !important;
-  }
+}
 
+// General Page Styles
+.page{
+    width: 80%;
+    margin: 0px auto;
+    position: relative;
+}
+@media (max-width: 1300px) {
+    .page{
+        width: 90%;
+    }
+}
+@media (max-width: 600px) {
+    .page{
+        width: 95%;
+    }
+}
+.pageTitle{
+    width: 90%;
+    margin: 0 auto;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    position: relative;
+
+    .pointer{
+        @include flex;
+        margin-right: 15px;
+
+        * {  
+            width: 12px;
+            height: 12px;
+            
+            border: 1px solid $white;
+            margin-right: 10px;
+            transform: rotate(45deg);
+            position: absolute;
+            transition-delay: 0.5s;
+        }
+
+        &.show{
+
+            .inner{
+                transform: rotate(135deg) scale(0.15);
+                animation: square-highlight-inner 0.6s ease-in;
+                background: $white;
+            }
+
+            .outer{
+                transform: rotate(135deg) scale(1.5);
+                animation: square-highlight-outer 0.6s ease-in;
+            }
+
+        }
+
+    }
+
+    .number{
+        color: rgba($white, 0.4);
+    }
+
+    .title{
+        letter-spacing: 2mm;
+    }
+
+    .line{
+        flex-grow: 1;
+        height: 1px; 
+        background: rgba($white, 0.4);
+    }
+}
+
+// Landing Page
 .landing-page{
 
-    margin-bottom: 150px;
+    margin-bottom: 100px;
     overflow: hidden;
     display: grid;
-    grid-template-rows: 100px 1fr 100px;
+    grid-template-rows: 100px 1fr 130px;
     grid-template-columns: 1fr;
     gap: 10px;
 
@@ -224,7 +296,7 @@ body {
        
         .cube-container{
             @include flex;
-
+            z-index: 50;
             &hover{
                 cursor: url(hand.cur),  grab;
             }
@@ -257,6 +329,7 @@ body {
         }
 
         .scrollHint{
+            z-index: 51;
             height: 100%;
             width: 30px;
             @include flex($direction: column);
@@ -290,7 +363,7 @@ body {
 
     .landing-page{
 
-        grid-template-rows: 140px 1fr 100px;
+        grid-template-rows: 140px 1fr 140px;
 
         .footer{
             margin-top: 20px;
@@ -315,102 +388,17 @@ body {
     }
 }
 
-// Seperator Styles with custom width
-@for $counter from 0 through 10{
+// About Us Page
+.about-us-page, .projects-page, .contact-page{
 
-    $percent : #{$counter * 10} + '%';
-
-    .seperator-#{$counter} {
-        width: $percent;
-        height: 1px;
-        margin: 0 auto;
-        background: rgba($white, 0.3);
-        
-    }
-}
-
-// General Page Styles
-.page{
-    width: 80%;
-    margin: 0px auto;
-}
-@media (max-width: 1300px) {
-    .page{
-        width: 90%;
-    }
-}
-@media (max-width: 600px) {
-    .page{
-        width: 95%;
-    }
-}
-
-.pageTitle{
-    width: 90%;
-    margin: 0 auto;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    gap: 15px;
-    position: relative;
-
-    .pointer{
-        @include flex;
-        margin-right: 15px;
-
-        * {  
-            width: 12px;
-            height: 12px;
-            
-            border: 1px solid $white;
-            margin-right: 10px;
-            transform: rotate(45deg);
-            position: absolute;
-            transition-delay: 0.5s;
-        }
-
-        &.show{
-
-            .inner{
-                transform: rotate(135deg) scale(0.15);
-                animation: square-highlight-inner 0.6s ease-in;
-                background: $white;
-            }
-
-            .outer{
-                transform: rotate(135deg) scale(1.5);
-                animation: square-highlight-outer 0.6s ease-in;
-            }
-
-        }
-
-    }
-
-    .number{
-        color: rgba($white, 0.4);
-    }
-
-    .title{
-        letter-spacing: 2mm;
-    }
-
-    .line{
-        flex-grow: 1;
-        height: 1px; 
-        background: rgba($white, 0.4);
-    }
-}
-
-.about-us-page{
-
-    height: calc(100vh - 60px);
-    height: calc((var(--vh, 1vh) * 100) - 70px);
+    min-height: calc(100vh - 60px);
+    min-height: calc((var(--vh, 1vh) * 100) - 70px);
     background: $black;
     margin-bottom: 200px;
 
     .content{
         // height: calc(100% - 160px);
-        height: calc(100% - 40px - 80px);
+        min-height: calc(100% - 40px - 80px);
         width: 90%;
         margin: 0 auto;
         margin-top: 40px;
@@ -418,10 +406,11 @@ body {
         flex-direction: row;
 
         .verticalLine{
-            height: 100%;
+            min-height: 100%;
             width: 1px;
             background: rgba($white, 0.1);
             margin-inline: 40px;
+            min-width: 1px;
         }
 
         .container{
@@ -429,11 +418,13 @@ body {
 
             .item{
 
-                font-size: 14px;
+                font-size: clamp(12px, 1.2vw, 14px);
                 letter-spacing: 0.4mm;
                 color: rgba($white, 1);
                 line-height: 1.6;
                 position: relative;
+                margin-top: 125px;
+                margin-bottom: 125px;
 
                 .info{
                     margin-left: clamp(0px, 3vw, 100px);
@@ -448,19 +439,20 @@ body {
                     border: 1px solid white;
                     left: -40.0px;
                     top: 50%;
+                    top: 13px;
                     transform: translate(-50%, -50%) rotate(45deg);
                     z-index: 20;
                 }
 
                 .title{
                     color: rgba($white, 0.7);
-                    font-size: 16px;
+                    font-size: clamp(14px, 1.4vw, 16px);
                     line-height: 1.6;
 
                 }
 
                 .techStack{
-                    @include flex($direction: row);
+                    @include flex($direction: row, $justify: flex-start);
                     flex-wrap: wrap;
 
                     margin-top: 20px;
@@ -489,6 +481,97 @@ body {
     }
 
 }
+
+@media (max-width: 530px ) {
+
+    .about-us-page, .projects-page, .contact-page{
+        margin-bottom: 100px;
+        .content{
+            width: 95%;
+            .verticalLine{
+                margin-inline: 5px;
+                margin-right: 30px;
+            }
+            .pointer{
+                left: -30px !important;
+            }
+            .item{
+                margin-top: 50px !important;
+                margin-bottom: 50px !important;
+            }
+        }
+    }
+}
+
+
+.projects-page{
+    .project{
+        @include flex($direction: column, $align: flex-start);
+        gap: 10px;
+        .featured{
+            color: rgba($white, 0.4);
+            &.manager{
+                color: rgb(102, 131, 228);
+            }
+            &.outfit{
+                color: rgb(106, 179, 134);
+            }
+            &.tsp{
+                color: rgb(202, 167, 126);
+            }
+            &.game{
+                color: rgb(167, 216, 231);
+            }
+        }
+        .title{
+            color: rgba($white, 0.9) !important;
+            font-size: clamp(16px, 1.6vw, 18px) !important;
+        }
+        .techStack{
+            margin-top: 0px !important;
+            margin-bottom: 0px !important;
+
+            *{
+            font-size: 22px !important;
+            }
+        }
+        .display{
+            margin: 5px;
+            margin-top: 20px;
+            position: relative;
+            img{
+                width: clamp(100px, 800px, 70vw);
+
+            }
+            .border{
+                position: absolute;
+                left: -5px;
+                top: -5px;
+                width: calc(100% + 10px);
+                height: calc(100% + 5px);
+                border: 1px solid rgba($white, 0.2);
+            }
+
+        }
+    }
+}
+
+.contact-page{
+    height: calc(100vh - 60px);
+    height: calc((var(--vh, 1vh) * 100) - 70px);
+    background: $black;
+    margin-bottom: 30px;
+    position: relative;
+
+    .content{
+        height: calc(100% - 200px) !important;
+        min-height: auto !important;
+    }
+}
+
+
+
+/// Keyframes 
 
 @keyframes square-highlight-outer{
     0% {
