--- a/src/assets/styles/_page-break.scss
+++ b/src/assets/styles/_page-break.scss
@@ -2,16 +2,116 @@ $black : #262730;
 $white : #FFF4E9;
 $cube: 19px;
 
+
+
+@-webkit-keyframes Animation {
+    0%{background-position:10% 0%}
+    50%{background-position:91% 100%}
+    100%{background-position:10% 0%}
+}
+@-moz-keyframes Animation {
+    0%{background-position:10% 0%}
+    50%{background-position:91% 100%}
+    100%{background-position:10% 0%}
+}
+@keyframes Animation { 
+    0%{background-position:10% 0%}
+    50%{background-position:91% 100%}
+    100%{background-position:10% 0%}
+}
+
 .page-break{
-  width: 80%;
-  margin: 50px auto;
+  width: 100%;
+  margin-bottom: 10px;
   height: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
-  
+  position: absolute;
+  bottom: 0;
+  left: 0;
+//   z-index: -1;
+
+  &.seperator{
+    bottom: 26px;
+  }
+
   *{
     position: absolute;
+  }
+
+  .footer-background{
+    width: 100vw;
+    height: calc(var(--size) * 3);
+    overflow: hidden;
+    transform: translateY(50px);
+    border: 1px solid rgba($white, 0.05);
+    // margin-bottom: 20px;
+    .cover{
+        width: 50%;
+        height: 100%;
+        background: $black;
+        z-index: 100;
+        float: left;
+        &.right{
+            right: 0;
+        }
+        transition: 3s ease-in-out;
+        transition-delay: 1s;
+    }
+     
+
+    .grid{
+        width: 100vw;
+        overflow: hidden;
+        height: 100vw;
+        display: grid;
+        grid-template-columns: repeat(var(--columns), 1fr);
+        grid-template-rows: repeat(var(--rows), 1fr);
+        transform-origin: center;
+        transform: rotate(45deg) translate(-37%, -37%);
+        background: linear-gradient(90deg, rgba($white, 0.2), rgba($white,0.05), rgba($white, 0.2));
+
+        -webkit-animation: Animation 5s ease infinite;
+        -moz-animation: Animation 5s ease infinite;
+        animation: Animation 5s ease infinite;
+        background-size: 200% 200%;
+
+        .tile{
+           
+           position: relative;
+           width: calc(100% - 1px);
+           height: calc(100% - 1px);
+           aspect-ratio: 1;
+           background: $black;
+           border: .5px solid transparent;
+           transition: 0.2s ease-in;
+        }
+
+    }
+
+  }
+
+  &.show{
+    .cover{
+        width: 0;
+    }
+ }
+
+  .cube-background{
+    width: 130px;
+    height: 130px;
+    background: $black;
+    position: absolute;
+
+    transform: rotate(45deg) ;
+    border: 1px solid rgba($white, 0.05);
+    .top-cover{
+        width: 200%;
+        height: 100%;
+        background: $black;
+        transform: rotate(-45deg) translate(-25%, -77%);
+    }
   }
   
   .inner-cube{
@@ -19,7 +119,7 @@ $cube: 19px;
     height: 30px;
     border: 1.5px solid rgba($white, 1);
     transform: rotate(45deg);
-    transition: 1s ease-out;
+    transition: 0.6s ease-out;
     display: flex;
     justify-content: center;
     z-index: 100;
@@ -34,6 +134,7 @@ $cube: 19px;
     width: 20px;
     height: 20px;
     border: .5px double rgba($white, 0.7);
+    outline: none;
     transform: rotate(-225deg);
     position: relative;
     margin-inline: 3px;
@@ -97,6 +198,7 @@ $cube: 19px;
 }
 
 .page-break.show{
+
     
     .inner-cube {
       transform: rotate(135deg);
