--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -2,6 +2,7 @@
 @use 'scroll-bar';
 @use 'trailer';
 @use 'page-break';
+@use 'footer';
 
 // Load Animations
 @use './load-animations/fade';
@@ -319,18 +320,12 @@ body {
         }
     }
     .footer{
-        @include flex;
+        @include flex($align: flex-start);
         grid-row: 3;
-        margin-bottom: 5px;
-
-        .footer-animation{
-            height: 100%;
-            filter: invert(1);
-        }
 
         .scrollHint{
             z-index: 51;
-            height: 100%;
+            height: 65px;
             width: 30px;
             @include flex($direction: column);
 
@@ -338,25 +333,26 @@ body {
                 transform: rotate(90deg);
                 font-size: 10px;
                 letter-spacing: 0.5mm;
+                color: rgba($white, 0.7);
+                // animation: pulse 3s ease-in-out infinite;
             }
 
-            .line{
-
-                margin-top: 30px;
-
-                width: 10px;
-                height: 10px;
-                border: 1px solid $white;
-                transform: rotate(45deg);
-                transition: 0.3s;
-            }
-
-            &.active{
-
-            }
         }
     }
 }
+
+
+@keyframes pulse {
+    0% {
+      color: rgba($white, 0.6);
+    }
+    50% {
+      color: transparent;
+    }
+    100% {
+      color: rgba($white, 0.6);
+    }
+  }
 
 // Media Query for Mobile Devices
 @media (max-width: 530px ) {
@@ -394,7 +390,7 @@ body {
 
     min-height: calc(100vh - 60px);
     min-height: calc((var(--vh, 1vh) * 100) - 70px);
-    margin-bottom: 200px;
+    margin-bottom: 0px;
 
     .content{
         // height: calc(100% - 160px);
@@ -485,7 +481,7 @@ body {
 @media (max-width: 530px ) {
 
     .about-us-page, .projects-page, .contact-page{
-        margin-bottom: 100px;
+        margin-bottom: 50px;
         .content{
             width: 95%;
             .verticalLine{
@@ -505,6 +501,7 @@ body {
 
 
 .projects-page{
+    margin-top: 300px;
     .project{
         @include flex($direction: column, $align: flex-start);
         gap: 10px;
@@ -558,12 +555,13 @@ body {
 
 .contact-page{
     height: calc(100vh - 60px);
-    height: calc((var(--vh, 1vh) * 100) - 70px); 
-    margin-bottom: 30px;
+    height: calc((var(--vh, 1vh) * 100) - 250px); 
+    margin-bottom: 0px;
+    margin-top: 300px;
     position: relative;
-
+    min-height: auto;
     .content{
-        height: calc(100% - 200px) !important;
+        height: calc(100% - 100px) !important;
         min-height: auto !important;
     }
 }
