--- a/src/assets/styles/_footer.scss
+++ b/src/assets/styles/_footer.scss
@@ -15,12 +15,12 @@ $white : #FFF4E9;
     z-index: -1;
 
     .grid{
-    
+        $grid-color : rgba($white, 0.1);
         width: 100%;
         height: 30px;
         border: 1px solid rgba($white,0.05);
         border-inline: none;
-        background-image: repeating-linear-gradient(-45deg, transparent, transparent 0.6em, rgba($white,0.1) 25%), repeating-linear-gradient(45deg, transparent, transparent 0.6em, rgba($white,0.1) 25%),;
+        background-image: repeating-linear-gradient(-45deg, transparent, transparent 0.6em, $grid-color 25%), repeating-linear-gradient(45deg, transparent, transparent 0.6em, $grid-color 25%),;
         background-size: 2em 2em,2em 2em;
 
     }
@@ -54,8 +54,8 @@ $white : #FFF4E9;
             transform-origin: right;
         }
 
-        transition: 3s;
-        transition-delay: .2s;
+        transition: 3s ease-out;
+        transition-delay: 3s;
         transform-origin: left;
     }
 
