--- a/src/assets/components/ContactForm/contact.scss
+++ b/src/assets/components/ContactForm/contact.scss
@@ -1,6 +1,10 @@
 $white : #FFF4E9;
 
 form{
+
+    .title{
+        margin-bottom: 10px;
+    }
     display: flex;
     flex-direction: column;
     
@@ -57,5 +61,72 @@ form{
         color: $white;
         padding: 10px;
         margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        font-size: 12px;
+        opacity: 0.8;
+
+        svg{
+ 
+            opacity: 0.6;
+            // height: 20px;
+        }
+    }
+
+    button:hover{
+        background: rgba(255,255,255,0.1);
+        cursor: pointer;
+    }
+
+    
+    &.hide{
+        display: none;
+    }
+}
+
+.emailConfirmed{
+
+    align-items: center;
+    font-size: 16px;
+
+    svg{
+        margin-left: 10px;
+        color: green;
+    }
+
+    display: flex;
+
+}
+
+@media (max-width: 800px) {
+    form {
+        width: 50vw;
+
+        .field-holder{
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            .field{
+               width: 100%;
+            }
+        }
+    }
+}
+
+@media (max-width: 450px) {
+    form {
+        
+        width: 65vw;
+
+        .field-holder{
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            .field{
+               width: 100%;
+            }
+        }
     }
 }
