add new projects

--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -175,61 +175,6 @@ body {
 
     @include flex;
 
-    .resume {
-      height: 100%;
-      font-size: 14px;
-      @include flex;
-      text-decoration: none;
-
-      * {
-        transition: 0.6s;
-      }
-
-      .icon {
-        @include flex;
-        position: relative;
-        height: 30px;
-        float: left;
-        width: 30px;
-      }
-
-      .text {
-        margin-left: 15px;
-        color: rgba($white, 0.8);
-        @include font-roboto($spacing: 0.6mm);
-      }
-
-      .square1,
-      .square2 {
-        width: 20px;
-        height: 20px;
-        border: 1px solid $white;
-        transform: rotate(45deg);
-        position: absolute;
-        transition: 0.4s;
-        float: left;
-      }
-
-      .square2 {
-        transition: opacity 0.8s ease-in, transform 0.4s linear;
-      }
-
-      &:hover {
-        .square1 {
-          transform: rotate(45deg) scale(0.15);
-          background: rgba($white, 0.8);
-        }
-        .square2 {
-          transform: rotate(45deg) scale(2);
-          opacity: 0.6;
-        }
-        .text {
-          transform: translateX(15px);
-          opacity: 0.6;
-        }
-      }
-    }
-
     .navigation {
       @include flex($justify: flex-end);
       flex-grow: 1;
@@ -324,6 +269,65 @@ body {
   }
 }
 
+.resume {
+  height: 100%;
+  font-size: 14px;
+  @include flex;
+  text-decoration: none;
+
+  * {
+    transition: 0.6s;
+  }
+
+  .icon {
+    @include flex;
+    position: relative;
+    height: 30px;
+    float: left;
+    width: 30px;
+  }
+
+  .text {
+    margin-left: 15px;
+    color: rgba($white, 0.8);
+    @include font-roboto($spacing: 0.6mm);
+  }
+
+  .square1,
+  .square2 {
+    width: 20px;
+    height: 20px;
+    border: 1px solid $white;
+    transform: rotate(45deg);
+    position: absolute;
+    transition: 0.4s;
+    float: left;
+  }
+
+  .square2 {
+    transition: opacity 0.8s ease-in, transform 0.4s linear;
+  }
+
+  &:hover {
+    .square1 {
+      transform: rotate(45deg) scale(0.15);
+      background: rgba($white, 0.8);
+    }
+    .square2 {
+      transform: rotate(45deg) scale(2);
+      opacity: 0.6;
+    }
+    .text {
+      transform: translateX(15px);
+      opacity: 0.6;
+    }
+  }
+
+  &.show-more {
+    transform: translate(-55px, 35px);
+  }
+}
+
 @keyframes pulse {
   0% {
     color: rgba($white, 0.6);
@@ -405,6 +409,10 @@ body {
         position: relative;
         margin-top: 125px;
         margin-bottom: 125px;
+
+        &.hidden {
+          display: none;
+        }
 
         .info {
           margin-left: clamp(0px, 3vw, 100px);
@@ -529,9 +537,15 @@ body {
 .projects-page {
   margin-top: 250px;
   margin-bottom: 50px;
+  padding-bottom: 80px;
   .project {
     @include flex($direction: column, $align: flex-start);
     gap: 10px;
+
+    &.hidden {
+      display: none;
+    }
+
     .featured {
       color: rgba($white, 0.4);
     }
@@ -610,10 +624,10 @@ body {
       }
       .border {
         position: absolute;
-        left: -5px;
-        top: -5px;
-        width: calc(100% + 10px);
-        height: calc(100% + 5px);
+        left: -6px;
+        top: -6px;
+        width: calc(100% + 12px);
+        height: calc(100% + 4px);
         border: 1px solid rgba($white, 0.2);
       }
     }
